Added the basic functionality

--- a/todolist/server/src/main/resources/application.properties
+++ b/todolist/server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=toDoListApplication
+
+spring.data.mongodb.uri=mongodb+srv://viktirzozulka:uVGInV2q4RhvogEU@todolistcluster.kdywqky.mongodb.net/
+server.port=5678
+spring.data.mongodb.database=mainDB
